--- a/templates/Dashboard/index.html
+++ b/templates/Dashboard/index.html
@@ -8,7 +8,7 @@
                         <div class="card-icon">
                             <i class="material-icons">next_week</i>
                         </div>
-                        <p class="card-category">Maletas Escaneadas</p>
+                        <p class="card-category">Pedidos Recibidos</p>
                         <h3 class="card-title">184</h3>
                     </div>
                     <div class="card-footer">
@@ -24,7 +24,7 @@
                         <div class="card-icon">
                             <i class="material-icons">date_range</i>
                         </div>
-                        <p class="card-category">Maletas Escaneadas</p>
+                        <p class="card-category">Pedidos Recibidos</p>
                         <h3 class="card-title">75.521</h3>
                     </div>
                     <div class="card-footer">
@@ -42,7 +42,7 @@
                         <div class="card-icon">
                             <i class="material-icons">pie_chart</i>
                         </div>
-                        <h4 class="card-title">Escaneadas por Empresa</h4>
+                        <h4 class="card-title">Pedidos Por Empresa</h4>
                     </div>
                     <div class="card-body">
                         <div id="chartPreferences" class="ct-chart"><svg xmlns:ct="http://gionkunz.github.com/chartist-js/ct" width="100%" height="230px" class="ct-chart-pie" style="width: 100%; height: 230px;"><g class="ct-series ct-series-a"><path d="M143.031,195.187A110,110,0,1,0,218.331,5L218.331,115Z" class="ct-slice-pie" ct:value="62"></path></g><g class="ct-series ct-series-b"><path d="M177.838,12.725A110,110,0,0,0,143.311,195.449L218.331,115Z" class="ct-slice-pie" ct:value="32"></path></g><g class="ct-series ct-series-c"><path d="M218.331,5A110,110,0,0,0,177.481,12.867L218.331,115Z" class="ct-slice-pie" ct:value="6"></path></g><g><text dx="269.46895977561167" dy="135.24685039765728" text-anchor="middle" class="ct-label">62%</text><text dx="164.30545426167993" dy="104.6940276977852" text-anchor="middle" class="ct-label">32%</text><text dx="208.0252807495429" dy="60.974201209922136" text-anchor="middle" class="ct-label">6%</text></g></svg></div>
@@ -53,9 +53,9 @@
                                 <h6 class="card-category">Legend</h6>
                             </div>
                             <div class="col-md-12">
-                                <i class="fa fa-circle text-info"></i> Avianca
-                                <i class="fa fa-circle text-warning"></i> Copa Airlines
-                                <i class="fa fa-circle text-danger"></i> Viva Air
+                                <i class="fa fa-circle text-info"></i> Agricola
+                                <i class="fa fa-circle text-warning"></i> Fruver
+                                <i class="fa fa-circle text-danger"></i> Otras
                             </div>
                         </div>
                     </div>
@@ -67,7 +67,7 @@
                         <div class="card-icon">
                             <i class="material-icons">insert_chart</i>
                         </div>
-                        <h4 class="card-title">Maletas por Dia
+                        <h4 class="card-title">Pedidos por Dia
                         </h4>
                     </div>
                     <div class="card-body">
