--- a/templates/Dashboard/index.html
+++ b/templates/Dashboard/index.html
@@ -6,7 +6,7 @@
                 <div class="card card-stats">
                     <div class="card-header card-header-warning card-header-icon">
                         <div class="card-icon">
-                            <i class="material-icons">next_week</i>
+                            <i class="material-icons">add_shopping_cart</i>
                         </div>
                         <p class="card-category">Pedidos Recibidos</p>
                         <h3 class="card-title">184</h3>
