--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -80,7 +80,7 @@
                 <script>
                     document.write(new Date().getFullYear())
                 </script>
-                <a href="https://www.creative-tim.com" target="_blank">Metis Consultores</a>
+                <a href="https://www.creative-tim.com" target="_blank">Alejandro</a>
             </div>
         </div>
     </footer>
